# wow-event-logger

.github/workflows/: build-and-deploy-event-server.yml
event-server/: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
event-server/app/: bot.py  main.py
event-server/app/crud/: base.py  character.py  character_watch.py
event-server/app/schemas/: character.py  character_watch.py  common.py
event-server/app/utils/: db.py  formatting.py
event-server/db/: schema.sql
event-watcher/: EventWatcher.lua  EventWatcher.toc
